LDR/.metadata/.plugins/org.eclipse.cdt.ui/a4q3.build.log
23:37:16 **** Build of configuration Debug for project a4q3 ****
make -j12 all 
arm-none-eabi-gcc -mcpu=cortex-m4 -g3 -DDEBUG -c -x assembler-with-cpp -MMD -MP -MF"Startup/startup_stm32f407ighx.d" -MT"Startup/startup_stm32f407ighx.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Startup/startup_stm32f407ighx.o" "../Startup/startup_stm32f407ighx.s"
arm-none-eabi-gcc "../Src/itm.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM3240G_EVAL -DSTM32 -DSTM32F407IGHx -DSTM32F4 -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/itm.d" -MT"Src/itm.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/itm.o"
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM3240G_EVAL -DSTM32 -DSTM32F407IGHx -DSTM32F4 -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
arm-none-eabi-gcc "../Src/my_led.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM3240G_EVAL -DSTM32 -DSTM32F407IGHx -DSTM32F4 -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/my_led.d" -MT"Src/my_led.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/my_led.o"
arm-none-eabi-gcc "../Src/my_switch.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM3240G_EVAL -DSTM32 -DSTM32F407IGHx -DSTM32F4 -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/my_switch.d" -MT"Src/my_switch.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/my_switch.o"
arm-none-eabi-gcc "../Src/syscalls.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM3240G_EVAL -DSTM32 -DSTM32F407IGHx -DSTM32F4 -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/syscalls.d" -MT"Src/syscalls.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/syscalls.o"
arm-none-eabi-gcc "../Src/sysmem.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM3240G_EVAL -DSTM32 -DSTM32F407IGHx -DSTM32F4 -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/sysmem.d" -MT"Src/sysmem.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/sysmem.o"
arm-none-eabi-gcc "../Src/system_stm32f4xx.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM3240G_EVAL -DSTM32 -DSTM32F407IGHx -DSTM32F4 -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/system_stm32f4xx.d" -MT"Src/system_stm32f4xx.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/system_stm32f4xx.o"
../Src/my_switch.c: In function 'switch_init':
../Src/my_switch.c:17:31: error: 'O' undeclared (first use in this function)
   17 |         GPIOA->MODER &= ~(3<<(O*2));
      |                               ^
../Src/my_switch.c:17:31: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Src/subdir.mk:37: Src/my_switch.o] Error 1
make: *** Waiting for unfinished jobs....
../Src/main.c:27:4: warning: #warning "FPU is not initialized, but the project is compiling for an FPU. Please initialize the FPU before use." [-Wcpp]
   27 |   #warning "FPU is not initialized, but the project is compiling for an FPU. Please initialize the FPU before use."
      |    ^~~~~~~
../Src/main.c: In function 'main':
../Src/main.c:32:9: warning: implicit declaration of function 'LED_init'; did you mean 'led_init'? [-Wimplicit-function-declaration]
   32 |         LED_init();
      |         ^~~~~~~~
      |         led_init
../Src/main.c:36:21: warning: implicit declaration of function 'switch_Read' [-Wimplicit-function-declaration]
   36 |                 if (switch_Read())
      |                     ^~~~~~~~~~~
"make -j12 all" terminated with exit code 2. Build might be incomplete.

23:37:17 Build Failed. 3 errors, 3 warnings. (took 513ms)

